ng routing modified

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.password=kyaw
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://localhost:3306/ngtestdb
+spring.datasource.url=jdbc:mysql://localhost:3306/ng_routing
 spring.jpa.hibernate.ddl-auto=update
